--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "import-in-the-middle": "^1.15.0",
     "lucide-react": "^0.545.0",
     "next": "16.0.1",
     "next-intl": "^4.3.12",
@@ -52,6 +53,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "2.15.4",
     "remark-gfm": "^4.0.1",
+    "require-in-the-middle": "^7.5.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
